redid spacing on sign up media query view after noticing issue, will continue to style it tomorrow"

--- a/client/src/components/Login/login.scss
+++ b/client/src/components/Login/login.scss
@@ -30,8 +30,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 50vh;
-      width: 50vh;
+      height: 56vh;
+      width: 56vh;
       margin-top: 50px;
       overflow: hidden;
     }
@@ -56,8 +56,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 50vh;
-        width: 50vh;
+        height: 56vh;
+        width: 56vh;
         background-position: center;
       }
   
