--- a/client/src/components/pages/Home/home.scss
+++ b/client/src/components/pages/Home/home.scss
@@ -34,8 +34,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 50vh;
-      width: 50vh;
+      height: 56vh;
+      width: 56vh;
       margin-top: 50px;
     }
 
